Finished all content for HTML

--- a/index.html
+++ b/index.html
@@ -68,6 +68,61 @@
       </div>
     </div>
   </div>
+  <div id="features">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1>What we offer.</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          icon
+        </div>
+        <div class="col">
+          icon
+        </div>
+        <div class="col">
+          icon
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="cta">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1>Join our Discord today!</h1>
+          <button type="button" class="btn btn-primary-outline">Join Today!</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="staff">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-12">1</div>
+        <div class="col-sm-12 col-md-12">2</div>
+        <div class="col-sm-12 col-md-12">3</div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-12">4</div>
+        <div class="col-sm-12 col-md-12">5</div>
+        <div class="col-sm-12 col-md-12">6</div>
+      </div>
+    </div>
+  </div>
+  <div id="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <p>&copy Team Nexus 2018 - Site created by
+            <span>Athys</span>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
