--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="#">Members</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Join</a>
+            <a class="nav-link btn btn-outline-primary" href="#">Join</a>
           </li>
         </ul>
       </div>
@@ -43,8 +43,8 @@
         <div class="col">
           <h1>Team Nexus</h1>
           <p>A community of Annihilation, MineZ, and HCF players.</p>
-          <button type="button" class="btn btn-primary-outline">Join today!</button>
-          <button type="button" class="btn btn-secondary-outline">Learn more.</button>
+          <button type="button" class="btn btn-outline-primary">Join today!</button>
+          <button type="button" class="btn btn-outline-secondary">Learn more.</button>
         </div>
       </div>
     </div>
@@ -93,7 +93,7 @@
       <div class="row">
         <div class="col">
           <h1>Join our Discord today!</h1>
-          <button type="button" class="btn btn-primary-outline">Join Today!</button>
+          <button type="button" class="btn btn-outline-primary">Join Today!</button>
         </div>
       </div>
     </div>
