--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Team Nexus | Home</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/teamnexus.css">
 </head>
 
 <body>
@@ -73,6 +74,7 @@
       <div class="row">
         <div class="col">
           <h1>What we offer.</h1>
+          <hr>
         </div>
       </div>
       <div class="row">
@@ -101,14 +103,20 @@
   <div id="staff">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-12">1</div>
-        <div class="col-sm-12 col-md-12">2</div>
-        <div class="col-sm-12 col-md-12">3</div>
+        <div class="col">
+          <h1>Our Team.</h1>
+          <hr>
+        </div>
       </div>
       <div class="row">
-        <div class="col-sm-12 col-md-12">4</div>
-        <div class="col-sm-12 col-md-12">5</div>
-        <div class="col-sm-12 col-md-12">6</div>
+        <div class="col-sm-12 col-md-4">1</div>
+        <div class="col-sm-12 col-md-4">2</div>
+        <div class="col-sm-12 col-md-4">3</div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-4">4</div>
+        <div class="col-sm-12 col-md-4">5</div>
+        <div class="col-sm-12 col-md-4">6</div>
       </div>
     </div>
   </div>
@@ -123,6 +131,10 @@
       </div>
     </div>
   </div>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.1/esm/popper.min.js'></script>
+  <script src="js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
