--- a/index.html
+++ b/index.html
@@ -8,31 +8,43 @@
   <title>Team Nexus | Home</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/teamnexus.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
+    crossorigin="anonymous"></script>
+
+
+
 </head>
 
 <body>
   <div id="navbar">
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <a class="navbar-brand" href="#">Team Nexus</a>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Team
+        <span>Nexus</span>
+      </a>
       <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavId">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="#">
+              <i class="fas fa-home"></i> Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#">
+              <i class="fas fa-question"></i> About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Members</a>
+            <a class="nav-link" href="#">
+              <i class="fas fa-users"></i> Members</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-outline-primary" href="#">Join</a>
+            <a class="nav-link btn btn-outline-primary" href="#">
+              <i class="align-middle fab fa-discord"></i> Join Team Nexus!</a>
           </li>
         </ul>
       </div>
