--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Team Nexus | Home</title>
+  <title>Team Nexus</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/teamnexus.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css' />
   <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
     crossorigin="anonymous"></script>
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png">
@@ -30,8 +31,8 @@
 <body>
   <div id="navbar">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">T
-        <span>N</span>
+      <a class="navbar-brand" href="#">Team
+        <span>Nexus</span>
       </a>
       <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
         aria-expanded="false" aria-label="Toggle navigation">
@@ -46,29 +47,42 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="#about">
               <i class="fas fa-question"></i> About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="#features">
+              <i class="fas fa-star    "></i> Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#staff">
               <i class="fas fa-users"></i> Members</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-outline-primary" href="#">
+            <a class="nav-link btn btn-outline-primary" href="https://discord.gg/bKNWxcq" target="_blank">
               <i class="align-middle fab fa-discord"></i> Join Team Nexus!</a>
           </li>
         </ul>
       </div>
     </nav>
   </div>
+
   <div id="hero">
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <h1>Team Nexus</h1>
-          <p>A community of Annihilation, MineZ, and HCF players.</p>
-          <button type="button" class="btn btn-outline-primary">Join today!</button>
-          <button type="button" class="btn btn-outline-secondary">Learn more.</button>
+    <div class="container-fluid">
+      <div class="row text-left ml-5">
+        <div class="col align-self-center">
+          <h1 class="display-1 wow fadeInLeft">Team
+            <span class="wow bounceIn" data-wow-delay="1.25s">Nexus</span>
+          </h1>
+          <p class="lead wow fadeInDown mt-2 ml-3" data-wow-delay="1.75s">A community of Annihilation, MineZ, and HCF players.</p>
+          <div class="wow slideInLeft mt-2 ml-2" data-wow-delay="2.25s">
+            <a href="https://discord.gg/bKNWxcq" target="_blank">
+              <button type="button" class="btn btn-outline-primary">Join today!</button>
+            </a>
+            <a href="#about">
+              <button type="button" class="btn btn-outline-secondary">Learn more.</button>
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -157,7 +171,10 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.1/esm/popper.min.js'></script>
   <script src="js/bootstrap.min.js"></script>
-
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js'></script>
+  <script>
+    new WOW().init();
+  </script>
 </body>
 
 </html>
