Configured features and CTA sections - unfinished

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
             We organize events, share videos, and play together on community hosted events. Discord is our main method of
             communication. Find new friends, play intense and friendly matches, or just chill out with other Shotbow players
             with Team Nexus! Join today! </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ipsam provident eveniet explicabo ipsa, voluptatum
+            consectetur dolores libero temporibus ea blanditiis veniam, repellendus culpa minus dicta dolorem quaerat. Atque,
+            a!</p>
         </div>
         <div class="col-md-4 d-none d-sm-block align-self-center">
           <img src="images/endstone.png" alt="Nexus" class="img-fluid mx-auto d-block wow bounceIn">
@@ -114,13 +117,15 @@
       <div class="row text-center">
         <div class="col align-self-center">
           <i class="fas fa-trophy fa-5x"></i>
-          <h1>Events</h1>
+          <h1>
+            Events
+          </h1>
           <p>Team Nexus hosts a plethora of events frequently! These events are either ran by our organizers or community members
             like you. Furthermore, we aren't limited to only Shotbow games as we will schedule play-times on different servers
             and games!</p>
         </div>
         <div class="col align-self-center">
-          <i class="fab fa-youtube fa-5x"></i>
+          <i class="fab fa-youtube fa-5x fa-border"></i>
           <h1>Grow</h1>
           <p>Share your YouTube, Twitch Livestrams, and other content in our bustling media channel! We encourage you to post
             your epic Shotbow experiences as well as other gameplay from your favorite network(s). You can also find other
@@ -128,7 +133,7 @@
         </div>
         <div class="col align-self-center">
 
-          <i class="fas fa-users fa-5x"></i>
+          <i class="fas fa-users fa-5x fa-border"></i>
 
           <h1>Community Ran</h1>
           <p>Team Nexus is ran by the community for the community! We encourage members to have an active say in how our server
