Fixed features sections and restyled the navbar

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <i class="fas fa-users"></i> Members</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-outline-primary" href="https://discord.gg/bKNWxcq" target="_blank">
+            <a class="nav-link btn btn-primary" href="https://discord.gg/bKNWxcq" target="_blank">
               <i class="align-middle fab fa-discord"></i> Join Team Nexus!</a>
           </li>
         </ul>
@@ -103,7 +103,8 @@
             with Team Nexus! Join today! </p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ipsam provident eveniet explicabo ipsa, voluptatum
             consectetur dolores libero temporibus ea blanditiis veniam, repellendus culpa minus dicta dolorem quaerat. Atque,
-            a!</p>
+            a!
+          </p>
         </div>
         <div class="col-md-4 d-none d-sm-block align-self-center">
           <img src="images/endstone.png" alt="Nexus" class="img-fluid mx-auto d-block wow bounceIn">
@@ -113,29 +114,32 @@
   </div>
   </div>
   <div id="features">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row text-center">
-        <div class="col align-self-center">
-          <i class="fas fa-trophy fa-5x"></i>
+        <div class="col-sm-12 col-md-4 align-self-center wow slideInLeft">
+          <i class="fas fa-trophy fa-5x fa-border"></i>
           <h1>
-            Events
+            <mark>Events</mark>
           </h1>
           <p>Team Nexus hosts a plethora of events frequently! These events are either ran by our organizers or community members
             like you. Furthermore, we aren't limited to only Shotbow games as we will schedule play-times on different servers
             and games!</p>
         </div>
-        <div class="col align-self-center">
+        <div class="col-sm-12 col-md-4 align-self-center wow bounceIn">
           <i class="fab fa-youtube fa-5x fa-border"></i>
-          <h1>Grow</h1>
-          <p>Share your YouTube, Twitch Livestrams, and other content in our bustling media channel! We encourage you to post
-            your epic Shotbow experiences as well as other gameplay from your favorite network(s). You can also find other
-            YouTubers to collaborate with and find enjoyable content from other members of the community.</p>
+          <h1>
+            <mark>Grow</mark>
+          </h1>
+          <p>Share your YouTube videos, Twitch Livestreams, and other content in our bustling media channel! You can also find
+            other media creators to collaborate with and further find enjoyable content from other members within the community.</p>
         </div>
-        <div class="col align-self-center">
+        <div class="col-sm-12 col-md-4 align-self-center wow slideInRight">
 
           <i class="fas fa-users fa-5x fa-border"></i>
 
-          <h1>Community Ran</h1>
+          <h1>
+            <mark>Community Ran</mark>
+          </h1>
           <p>Team Nexus is ran by the community for the community! We encourage members to have an active say in how our server
             is ran, after all, it is just a bunch of gamers who want to have fun! Connect with clan members from Shotbow
             and start playing!</p>
@@ -188,8 +192,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.1/esm/popper.min.js'></script>
   <script src="js/bootstrap.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js'></script>
-  <script>
-    new WOW().init();
+  <script> new WOW().init();
   </script>
   <script>
     $('body').scrollspy({ target: '#navbar' })
