--- a/index.html
+++ b/index.html
@@ -150,30 +150,34 @@
   <div id="cta">
     <div class="container">
       <div class="row">
-        <div class="col">
-          <h1>Join our Discord today!</h1>
-          <button type="button" class="btn btn-outline-primary">Join Today!</button>
+        <div class="col-sm-12 col-md-8 align-self-center float-left">
+          <h1 class="display-4">Join Our Discord Today!</h1>
+        </div>
+        <div class="col-4 align-self-center float-right mt-3 mb-3 wow zoomIn">
+          <iframe src="https://discordapp.com/widget?id=396363816683962368&theme=dark" width="250" height="400" allowtransparency="true"
+            frameborder="0"></iframe>
         </div>
       </div>
     </div>
   </div>
   <div id="staff">
     <div class="container">
-      <div class="row">
-        <div class="col">
-          <h1>Our Team.</h1>
-          <hr>
+      <div class="row mt-4">
+        <div class="col-12 align-self-center">
+          <h1>
+            <mark>Our Team.</mark>
+          </h1>
+          <hr class="mt-3">
+
         </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-4">1</div>
-        <div class="col-sm-12 col-md-4">2</div>
-        <div class="col-sm-12 col-md-4">3</div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-4">4</div>
-        <div class="col-sm-12 col-md-4">5</div>
-        <div class="col-sm-12 col-md-4">6</div>
+        <div class="col-md-4 align-self-center">1</div>
+        <div class="col-md-4 align-self-center">2</div>
+        <div class="col-md-4 align-self-center">3</div>
+        <div class="col-md-4 align-self-center">4</div>
+        <div class="col-md-4 align-self-center">5</div>
+        <div class="col-md-4 align-self-center">6</div>
+
+
       </div>
     </div>
   </div>
@@ -188,6 +192,7 @@
       </div>
     </div>
   </div>
+  <div id="demo"></div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.1/esm/popper.min.js'></script>
   <script src="js/bootstrap.min.js"></script>
