Completed Staff Section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body data-spy="scroll" data-target="#navbar" data-offset="0">
+<body data-spy="scroll" data-target=".navbar" data-offset="10">
   <div id="navbar">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="#">Team
@@ -56,7 +56,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#staff">
-              <i class="fas fa-users"></i> Members</a>
+              <i class="fas fa-users"></i> Team</a>
           </li>
           <li class="nav-item">
             <a class="nav-link btn btn-primary" href="https://discord.gg/bKNWxcq" target="_blank">
@@ -170,12 +170,59 @@
           <hr class="mt-3">
 
         </div>
-        <div class="col-md-4 align-self-center">1</div>
-        <div class="col-md-4 align-self-center">2</div>
-        <div class="col-md-4 align-self-center">3</div>
-        <div class="col-md-4 align-self-center">4</div>
-        <div class="col-md-4 align-self-center">5</div>
-        <div class="col-md-4 align-self-center">6</div>
+        <div class="col-12 align-self-center mt-3">
+          <p>Our team is full of diverse members from across the Shotbow community! We work hard to create a safe and fun environment
+            for all of our members! We look forward to adding dedicated, kind, and helpful members from the community to
+            our team!</p>
+        </div>
+        <div class="col-sm-12 col-md-4 align-self-center text-center mt-4">
+          <img src="http://cravatar.eu/helmavatar/maashg/64" class="img-fluid" alt="Maasgh" draggable="false">
+          <p class="lead">Maashg</p>
+          <p class="muted">Team Nexus Founder / EU Moderator</p>
+
+        </div>
+        <div class="col-sm-12 col-md-4 align-self-center text-center mt-4">
+          <img src="http://cravatar.eu/helmavatar/_itsanni_/64" class="img-fluid" alt="_ItsAnni_" draggable="false">
+          <p class="lead">_ItsAnni_</p>
+          <p class="muted">US Moderator</p>
+
+        </div>
+        <div class="col-sm-12 col-md-4 align-self-center text-center mt-4">
+          <img src="http://cravatar.eu/helmavatar/athys/64" class="img-fluid" alt="Athys" draggable="false">
+          <p class="lead">Athys</p>
+          <p class="muted">US Moderator</p>
+
+        </div>
+        <div class="col-sm-12 col-md-4 align-self-center text-center mt-4">
+          <img src="https://cravatar.eu/avatar/nascaa/64" class="img-fluid" alt="nascaa" draggable="false">
+          <p class="lead">Nascaa</p>
+          <p class="muted">JP Moderator</p>
+
+        </div>
+        <div class="col-sm-12 col-md-4 align-self-center text-center mt-4">
+          <img src="https://cravatar.eu/avatar/unhinge/64" class="img-fluid" alt="Unhinge" draggable="false">
+          <p class="lead">Unhinge</p>
+          <p class="muted">EU Moderator</p>
+
+        </div>
+        <div class="col-sm-12 col-md-4 align-self-center text-center mt-4">
+          <img src="https://cravatar.eu/avatar/Camarum/64" class="img-fluid" alt="Camarum" draggable="false">
+          <p class="lead">Camarum</p>
+          <p class="muted">EU Moderator</p>
+
+        </div>
+        <div class="col-sm-12 col-md-6 align-self-center text-center mt-4 ">
+          <img src="https://cravatar.eu/avatar/mikototkun/64" class="img-fluid" alt="mikotokun" draggable="false">
+          <p class="lead">mikotokun</p>
+          <p class="muted">JP Moderator</p>
+
+        </div>
+        <div class="col-md-6 align-self-center text-center mt-4">
+          <img src="https://cravatar.eu/avatar/___mika___/64" class="img-fluid" alt="___Mika___" draggable="false">
+          <p class="lead">___Mika___</p>
+          <p class="muted">US Moderator</p>
+
+        </div>
 
 
       </div>
@@ -184,7 +231,7 @@
   <div id="footer">
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col align-self-center mt-3">
           <p>&copy Team Nexus 2018 - Site created by
             <span>Athys</span>
           </p>
