--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
 </head>
 
-<body data-spy="scroll" data-target=".navbar" data-offset="40000">
+<body data-spy="scroll" data-target=".navbar" data-offset="64">
   <div id="navbar">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Team
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#hero">Team
         <span>Nexus</span>
       </a>
       <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
@@ -40,10 +40,10 @@
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">
+          <li class="nav-item">
+            <a class="nav-link" href="#hero">
               <i class="fas fa-home"></i> Home
-              <span class="sr-only">(current)</span>
+
             </a>
           </li>
           <li class="nav-item">
@@ -69,13 +69,13 @@
 
   <div id="hero">
     <div class="container-fluid">
-      <div class="row text-left ml-5">
-        <div class="col align-self-center">
+      <div class="row text-left ml-lg-5">
+        <div class="col-12 align-self-center">
           <h1 class="display-1 wow fadeInLeft">Team
-            <span class="wow bounceIn" data-wow-delay="1.25s">Nexus</span>
+            <span class="wow bounceIn" data-wow-delay="1.25s" data-wow-duration="1s" data-wow-duration="2s">Nexus</span>
           </h1>
-          <p class="lead wow fadeInDown mt-2 ml-3" data-wow-delay="1.75s">A community of Annihilation, MineZ, and HCF players.</p>
-          <div class="wow slideInLeft mt-2 ml-2" data-wow-delay="2.25s">
+          <p class="lead wow fadeInDown mt-2 ml-lg-3" data-wow-delay="1.75s" data-wow-duration="2.5s">A community of Annihilation, MineZ, and HCF players.</p>
+          <div class="wow slideInLeft mt-2 ml-lg-2 mt-sm-5 mobile" data-wow-delay="2.25s" data-wow-duration="3s">
             <a href="https://discord.gg/bKNWxcq" target="_blank">
               <button type="button" class="btn btn-outline-primary">Join today!</button>
             </a>
@@ -87,14 +87,15 @@
       </div>
     </div>
   </div>
+  </div>
   <div id="about">
     <div class="container">
 
-      <div class="row mt-4">
+      <div class="row">
         <div class="col-sm-12 col-md-8 align-self-center">
           <h1>
             <mark>About Team Nexus.</mark>
-            <hr class="mt-3">
+            <hr class="mt-3 d-md-none d-lg-block">
 
           </h1>
           <p>Team Nexus is a group, not a clan, comprised of Annihilation, MineZ, HCF, and other members of the Shotbow community.
@@ -116,7 +117,7 @@
   <div id="features">
     <div class="container-fluid">
       <div class="row text-center">
-        <div class="col-sm-12 col-md-4 align-self-center wow slideInLeft">
+        <div class="col-md-12 col-md-4 align-self-center wow slideInLeft">
           <i class="fas fa-trophy fa-5x fa-border"></i>
           <h1>
             <mark>Events</mark>
@@ -125,7 +126,7 @@
             like you. Furthermore, we aren't limited to only Shotbow games as we will schedule play-times on different servers
             and games!</p>
         </div>
-        <div class="col-sm-12 col-md-4 align-self-center wow bounceIn">
+        <div class="col-md-12 col-md-4 align-self-center wow bounceIn">
           <i class="fab fa-youtube fa-5x fa-border"></i>
           <h1>
             <mark>Grow</mark>
@@ -133,7 +134,7 @@
           <p>Share your YouTube videos, Twitch Livestreams, and other content in our bustling media channel! You can also find
             other media creators to collaborate with and further find enjoyable content from other members within the community.</p>
         </div>
-        <div class="col-sm-12 col-md-4 align-self-center wow slideInRight">
+        <div class="col-md-12 col-md-4 align-self-center wow slideInRight">
 
           <i class="fas fa-users fa-5x fa-border"></i>
 
@@ -150,10 +151,11 @@
   <div id="cta">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-8 align-self-center float-left">
-          <h1 class="display-4">Join Our Discord Today!</h1>
+        <div class="col-md-12 col-lg-8 align-self-center">
+          <h1 class="display-4">Join Team Nexus Today!</h1>
+          <p class="lead">Click 'Connect' on the right-hand side to join our Discord server.</p>
         </div>
-        <div class="col-4 align-self-center float-right mt-3 mb-3 wow zoomIn">
+        <div class="col-md-12 col-lg-4 align-self-center  mt-3 mb-3 wow zoomIn">
           <iframe src="https://discordapp.com/widget?id=396363816683962368&theme=dark" width="250" height="400" allowtransparency="true"
             frameborder="0"></iframe>
         </div>
@@ -167,7 +169,7 @@
           <h1>
             <mark>Our Team.</mark>
           </h1>
-          <hr class="mt-3">
+          <hr class="mt-3  d-md-none d-lg-block">
 
         </div>
         <div class="col-12 align-self-center mt-3">
@@ -212,7 +214,7 @@
 
         </div>
         <div class="col-sm-12 col-md-6 align-self-center text-center mt-4 ">
-          <img src="https://cravatar.eu/avatar/mikototkun/64" class="img-fluid" alt="mikotokun" draggable="false">
+          <img src="https://cravatar.eu/avatar/mikotokun/64" class="img-fluid" alt="mikotokun" draggable="false">
           <p class="lead">mikotokun</p>
           <p class="muted">JP Moderator</p>
 
@@ -247,8 +249,45 @@
   <script> new WOW().init();
   </script>
   <script>
-    $('body').scrollspy({ target: '#navbar' })
+    $('body').scrollspy({ target: '.navbar' })
   </script>
+  <script>
+    // Select all links with hashes
+    $('a[href*="#"]')
+      // Remove links that don't actually link to anything
+      .not('[href="#"]')
+      .not('[href="#0"]')
+      .click(function (event) {
+        // On-page links
+        if (
+          location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '')
+          &&
+          location.hostname == this.hostname
+        ) {
+          // Figure out element to scroll to
+          var target = $(this.hash);
+          target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+          // Does a scroll target exist?
+          if (target.length) {
+            // Only prevent default if animation is actually gonna happen
+            event.preventDefault();
+            $('html, body').animate({
+              scrollTop: target.offset().top
+            }, 1000, function () {
+              // Callback after animation
+              // Must change focus!
+              var $target = $(target);
+              $target.focus();
+              if ($target.is(":focus")) { // Checking if the target was focused
+                return false;
+              } else {
+                $target.attr('tabindex', '-1'); // Adding tabindex for elements not focusable
+                $target.focus(); // Set focus again
+              };
+            });
+          }
+        }
+      });</script>
 </body>
 
 </html>
