Fixed 'col-md-4' in features section to be 'col-lg-4'

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <div id="features">
     <div class="container-fluid">
       <div class="row text-center">
-        <div class="col-md-12 col-md-4 align-self-center wow slideInLeft">
+        <div class="col-md-12 col-lg-4 align-self-center wow slideInLeft">
           <i class="fas fa-trophy fa-5x fa-border"></i>
           <h1>
             <mark>Events</mark>
@@ -126,7 +126,7 @@
             like you. Furthermore, we aren't limited to only Shotbow games as we will schedule play-times on different servers
             and games!</p>
         </div>
-        <div class="col-md-12 col-md-4 align-self-center wow bounceIn">
+        <div class="col-md-12 col-lg-4 align-self-center wow bounceIn">
           <i class="fab fa-youtube fa-5x fa-border"></i>
           <h1>
             <mark>Grow</mark>
@@ -134,7 +134,7 @@
           <p>Share your YouTube videos, Twitch Livestreams, and other content in our bustling media channel! You can also find
             other media creators to collaborate with and further find enjoyable content from other members within the community.</p>
         </div>
-        <div class="col-md-12 col-md-4 align-self-center wow slideInRight">
+        <div class="col-md-12 col-lg-4 align-self-center wow slideInRight">
 
           <i class="fas fa-users fa-5x fa-border"></i>
 
