--- a/index.html
+++ b/index.html
@@ -98,13 +98,12 @@
             <hr class="mt-3 d-md-none d-lg-block">
 
           </h1>
-          <p>Team Nexus is a group, not a clan, comprised of Annihilation, MineZ, HCF, and other members of the Shotbow community.
-            We organize events, share videos, and play together on community hosted events. Discord is our main method of
-            communication. Find new friends, play intense and friendly matches, or just chill out with other Shotbow players
-            with Team Nexus! Join today! </p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ipsam provident eveniet explicabo ipsa, voluptatum
-            consectetur dolores libero temporibus ea blanditiis veniam, repellendus culpa minus dicta dolorem quaerat. Atque,
-            a!
+          <p>Team Nexus is a group - not a clan - comprised of Annihilation, MineZ, HCF, and other members of the Shotbow community.
+            We converse, share videos, and play together on numerous events! Discord is our main method of communication.
+            Find new friends, play intense and friendly matches, or just chill out with other Shotbow players with Team Nexus!</p>
+          <p>Though the server's name implies that we are Annihlation based, we are - generally - Shotbow based! We are open
+            to all members of Shotbow's community, clans, etc. At the end of the day, we are all Shotbow players looking
+            for a good time!
           </p>
         </div>
         <div class="col-md-4 d-none d-sm-block align-self-center">
@@ -164,19 +163,21 @@
   </div>
   <div id="staff">
     <div class="container">
-      <div class="row mt-4">
-        <div class="col-12 align-self-center">
+      <div class="row">
+        <div class="col-8 align-self-center">
           <h1>
             <mark>Our Team.</mark>
           </h1>
-          <hr class="mt-3  d-md-none d-lg-block">
+          <hr class="mt-3 d-md-none d-lg-block">
 
-        </div>
-        <div class="col-12 align-self-center mt-3">
-          <p>Our team is full of diverse members from across the Shotbow community! We work hard to create a safe and fun environment
+
+
+          <p class="mt-3">Our team is full of diverse members from across the Shotbow community! We work hard to create a safe and fun environment
             for all of our members! We look forward to adding dedicated, kind, and helpful members from the community to
             our team!</p>
         </div>
+        <div class="w-100"></div>
+
         <div class="col-sm-12 col-md-4 align-self-center text-center mt-4">
           <img src="http://cravatar.eu/helmavatar/maashg/64" class="img-fluid" alt="Maasgh" draggable="false">
           <p class="lead">Maashg</p>
@@ -251,43 +252,7 @@
   <script>
     $('body').scrollspy({ target: '.navbar' })
   </script>
-  <script>
-    // Select all links with hashes
-    $('a[href*="#"]')
-      // Remove links that don't actually link to anything
-      .not('[href="#"]')
-      .not('[href="#0"]')
-      .click(function (event) {
-        // On-page links
-        if (
-          location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '')
-          &&
-          location.hostname == this.hostname
-        ) {
-          // Figure out element to scroll to
-          var target = $(this.hash);
-          target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-          // Does a scroll target exist?
-          if (target.length) {
-            // Only prevent default if animation is actually gonna happen
-            event.preventDefault();
-            $('html, body').animate({
-              scrollTop: target.offset().top
-            }, 1000, function () {
-              // Callback after animation
-              // Must change focus!
-              var $target = $(target);
-              $target.focus();
-              if ($target.is(":focus")) { // Checking if the target was focused
-                return false;
-              } else {
-                $target.attr('tabindex', '-1'); // Adding tabindex for elements not focusable
-                $target.focus(); // Set focus again
-              };
-            });
-          }
-        }
-      });</script>
+  <script src="js/smoothscroll.js"></script>
 </body>
 
 </html>
