--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <a href="#about">
               <button type="button" class="btn btn-outline-secondary">Learn more.</button>
             </a>
+
           </div>
         </div>
       </div>
@@ -95,7 +96,7 @@
         <div class="col-sm-12 col-md-8 align-self-center">
           <h1>
             <mark>About Team Nexus.</mark>
-            <hr class="mt-3 d-md-none d-lg-block">
+            <hr class="mt-3 d-none d-lg-block">
 
           </h1>
           <p>Team Nexus is a group - not a clan - comprised of Annihilation, MineZ, HCF, and other members of the Shotbow community.
@@ -158,17 +159,19 @@
           <iframe src="https://discordapp.com/widget?id=396363816683962368&theme=dark" width="250" height="400" allowtransparency="true"
             frameborder="0"></iframe>
         </div>
+
       </div>
+
     </div>
   </div>
   <div id="staff">
     <div class="container">
       <div class="row">
-        <div class="col-8 align-self-center">
+        <div class="col-md-12 col-lg-8 align-self-center">
           <h1>
             <mark>Our Team.</mark>
           </h1>
-          <hr class="mt-3 d-md-none d-lg-block">
+          <hr class="mt-3 d-none d-lg-block">
 
 
 
@@ -198,7 +201,7 @@
         </div>
         <div class="col-sm-12 col-md-4 align-self-center text-center mt-4">
           <img src="https://cravatar.eu/avatar/nascaa/64" class="img-fluid" alt="nascaa" draggable="false">
-          <p class="lead">Nascaa</p>
+          <p class="lead">nascaa</p>
           <p class="muted">JP Moderator</p>
 
         </div>
