--- a/jp/index.html
+++ b/jp/index.html
@@ -6,22 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Team Nexus</title>
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/teamnexus.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/teamnexus.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css' />
   <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
     crossorigin="anonymous"></script>
-  <link rel="apple-touch-icon" sizes="180x180" href="../images/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../images/favicons/favicon-16x16.png">
-  <link rel="manifest" href="../images/favicons/site.webmanifest">
-  <link rel="shortcut icon" href="../images/favicons/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
+  <link rel="manifest" href="images/favicons/site.webmanifest">
+  <link rel="shortcut icon" href="images/favicons/favicon.ico">
   <meta name="apple-mobile-web-app-title" content="Team Nexus">
   <meta name="application-name" content="Team Nexus">
   <meta name="msapplication-TileColor" content="#455a64">
-  <meta name="msapplication-TileImage" content="../images/favicons/mstile-144x144.png">
-  <meta name="msapplication-config" content="../images/favicons/browserconfig.xml">
+  <meta name="msapplication-TileImage" content="images/favicons/mstile-144x144.png">
+  <meta name="msapplication-config" content="images/favicons/browserconfig.xml">
   <meta name="theme-color" content="#455a64">
 
 
@@ -65,11 +65,11 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
-              Language: JP
+              Language: EN
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="../">English</a>
-              <a class="dropdown-item selected" href="">日本語</a>
+              <a class="dropdown-item selected" href="">English</a>
+              <a class="dropdown-item" href="jp/">日本語</a>
             </div>
           </li>
         </ul>
@@ -105,20 +105,16 @@
       <div class="row">
         <div class="col-sm-12 col-md-8 align-self-center">
           <h1>
-            <mark>About Team Nexus.</mark>
+            <mark>チームネクサスについて。</mark>
             <hr class="mt-3 d-none d-lg-block">
 
           </h1>
-          <p>Team Nexus is a group - not a clan - comprised of Annihilation, MineZ, HCF, and other members of the Shotbow community.
-            We converse, share videos, and play together on numerous events! Discord is our main method of communication.
-            Find new friends, play intense and friendly matches, or just chill out with other Shotbow players with Team Nexus!</p>
-          <p>Though the server's name implies that we are Annihlation based, we are - generally - Shotbow based! We are open
-            to all members of Shotbow's community, clans, etc. At the end of the day, we are all Shotbow players looking
-            for a good time!
+          <p>Team Nexusは、Annihilation、MineZ、HCF、およびShotbowコミュニティのメンバーで構成されたグループであり、クランではありません。私たちは会話をし、ビデオを共有し、数多くのイベントで一緒に遊ぶことができます！Discordは我々のコミュニケーションの主な方法です。新しい友達を見つけたり、楽しくて友好的な試合をしたり、チームネクサスでたくさんの選手たちと一緒に遊ぼう！</p>
+          <p>サーバーの名前は、Annihlationがベースです。皆の所属クランなどをメンバー全員に公開されます。
           </p>
         </div>
         <div class="col-md-4 d-none d-sm-block align-self-center">
-          <img src="../images/endstone.png" alt="Nexus" class="img-fluid mx-auto d-block wow bounceIn" data-wow-offset="250">
+          <img src="images/endstone.png" alt="Nexus" class="img-fluid mx-auto d-block wow bounceIn" data-wow-offset="250">
         </div>
       </div>
     </div>
@@ -130,19 +126,16 @@
         <div class="col-md-12 col-lg-4 align-self-center wow slideInLeft" data-wow-offset="250" data-wow-duration="2s">
           <i class="fas fa-trophy fa-5x fa-border"></i>
           <h1>
-            <mark>Events</mark>
+            <mark>イベントについて</mark>
           </h1>
-          <p>Team Nexus hosts a plethora of events frequently! These events are either ran by our organizers or community members
-            like you. Furthermore, we aren't limited to only Shotbow games as we will schedule play-times on different servers
-            and games!</p>
+          <p>チームネクサスは頻繁に多くのイベントを開催しています。これらのイベントは、主催者やあなたのようなコミュニティメンバーによって運営されています。さらに、Shotbowのゲームだけに限定されるものではなく、異なるサーバーやゲームでイベントを開く予定です。</p>
         </div>
         <div class="col-md-12 col-lg-4 align-self-center wow bounceIn" data-wow-offset="250" data-wow-duration="2s">
           <i class="fab fa-youtube fa-5x fa-border"></i>
           <h1>
             <mark>Grow</mark>
           </h1>
-          <p>Share your YouTube videos, Twitch Livestreams, and other content in our bustling media channel! You can also find
-            other media creators to collaborate with and further find enjoyable content from other members within the community.</p>
+          <p>" YouTube" その他のコンテンツを私たちの活気に満ちたメディアチャンネルで共有しましょう！共同制作する他のメディアクリエイターを見つけて、コミュニティ内の他のメンバーからの楽しいコンテンツをさらに見つけることもできます。</p>
         </div>
         <div class="col-md-12 col-lg-4 align-self-center wow slideInRight" data-wow-offset="250" data-wow-duration="2s">
 
@@ -151,9 +144,8 @@
           <h1>
             <mark>Community Ran</mark>
           </h1>
-          <p>Team Nexus is ran by the community for the community! We encourage members to have an active say in how our server
-            is ran, after all, it is just a bunch of gamers who want to have fun! Connect with clan members from Shotbow
-            and start playing!</p>
+          <p>チームネクサスはコミュニティメンバーによって運営されています！メンバーは、私たちのサーバーで活発な発言をすることを奨励しています。 Shotbowのクランメンバーとつながり、遊びましょう！ チームネクサスに参加！
+          </p>
         </div>
       </div>
     </div>
@@ -163,7 +155,7 @@
       <div class="row">
         <div class="col-md-12 col-lg-8 align-self-center">
           <h1 class="display-4">Join Team Nexus Today!</h1>
-          <p class="lead">Click 'Connect' on the right-hand side to join our Discord server.</p>
+          <p class="lead">Discordサーバーに参加するには、右側の[接続]をクリックします。</p>
         </div>
         <div class="col-md-12 col-lg-4 align-self-center  mt-3 mb-3 wow zoomIn">
           <iframe src="https://discordapp.com/widget?id=396363816683962368&theme=dark" width="250" height="400" allowtransparency="true"
@@ -179,46 +171,44 @@
       <div class="row">
         <div class="col-md-12 col-lg-8 align-self-center">
           <h1>
-            <mark>Our Team.</mark>
+            <mark>管理者。</mark>
           </h1>
           <hr class="mt-3 d-none d-lg-block">
 
 
 
-          <p class="mt-3">Our team is full of diverse members from across the Shotbow community! We work hard to create a safe and fun environment
-            for all of our members! We look forward to adding dedicated, kind, and helpful members from the community to
-            our team!</p>
+          <p class="mt-3">私たちのチームには、Shotbowコミュニティ全体のさまざまなメンバーがいっぱいです！私たちは、全員が安全で楽しい環境を作り上げるために努力しています！私たちは、コミュニティから献身的で、親切で、有益なメンバーを私たちのチームに参加することを楽しみにしています！</p>
         </div>
         <div class="w-100"></div>
 
         <div class="col-sm-12 col-md-4 align-self-center text-center mt-4">
           <img src="http://cravatar.eu/helmavatar/maashg/64" class="img-fluid" alt="Maasgh" draggable="false">
           <p class="lead">Maashg</p>
-          <p class="muted">Team Nexus Founder / EU Moderator</p>
+          <p class="muted">チームネクサス創設者 / EUモデレーター</p>
 
         </div>
         <div class="col-sm-12 col-md-4 align-self-center text-center mt-4">
           <img src="http://cravatar.eu/helmavatar/_itsanni_/64" class="img-fluid" alt="_ItsAnni_" draggable="false">
           <p class="lead">_ItsAnni_</p>
-          <p class="muted">US Moderator</p>
+          <p class="muted">USモデレーター</p>
 
         </div>
         <div class="col-sm-12 col-md-4 align-self-center text-center mt-4">
           <img src="http://cravatar.eu/helmavatar/athys/64" class="img-fluid" alt="Athys" draggable="false">
           <p class="lead">Athys</p>
-          <p class="muted">US Moderator</p>
+          <p class="muted">USモデレーター</p>
 
         </div>
         <div class="col-sm-12 col-md-4 align-self-center text-center mt-4">
           <img src="https://cravatar.eu/avatar/nascaa/64" class="img-fluid" alt="nascaa" draggable="false">
           <p class="lead">nascaa</p>
-          <p class="muted">JP Moderator</p>
+          <p class="muted">JPモデレーター</p>
 
         </div>
         <div class="col-sm-12 col-md-4 align-self-center text-center mt-4">
           <img src="https://cravatar.eu/avatar/unhinge/64" class="img-fluid" alt="Unhinge" draggable="false">
           <p class="lead">Unhinge</p>
-          <p class="muted">EU Moderator</p>
+          <p class="muted">EUモデレーター</p>
 
         </div>
         <div class="col-sm-12 col-md-4 align-self-center text-center mt-4">
@@ -230,13 +220,13 @@
         <div class="col-sm-12 col-md-6 align-self-center text-center mt-4 ">
           <img src="https://cravatar.eu/avatar/mikotokun/64" class="img-fluid" alt="mikotokun" draggable="false">
           <p class="lead">mikotokun</p>
-          <p class="muted">JP Moderator</p>
+          <p class="muted">JPモデレーター</p>
 
         </div>
         <div class="col-md-6 align-self-center text-center mt-4">
           <img src="https://cravatar.eu/avatar/___mika___/64" class="img-fluid" alt="___Mika___" draggable="false">
           <p class="lead">___Mika___</p>
-          <p class="muted">US Moderator</p>
+          <p class="muted">USモデレーター</p>
 
         </div>
 
@@ -258,7 +248,7 @@
   <div id="demo"></div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.1/esm/popper.min.js'></script>
-  <script src="../js/bootstrap.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js'></script>
   <!-- Initialize wow.js -->
   <script> new WOW().init();
@@ -268,7 +258,7 @@
     $('body').scrollspy({ target: '.navbar' })
   </script>
   <!-- Import and initialize smooth scrolling -->
-  <script src="../js/smoothscroll.js"></script>
+  <script src="js/smoothscroll.js"></script>
   <!-- Initialize fade-scroll effects -->
   <script>
     $(window).scroll(function () {
