Forgot to switch sources when switching files.. double derp

--- a/jp/index.html
+++ b/jp/index.html
@@ -12,16 +12,16 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css' />
   <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
     crossorigin="anonymous"></script>
-  <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
-  <link rel="manifest" href="images/favicons/site.webmanifest">
-  <link rel="shortcut icon" href="images/favicons/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="../images/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../images/favicons/favicon-16x16.png">
+  <link rel="manifest" href="../images/favicons/site.webmanifest">
+  <link rel="shortcut icon" href="../images/favicons/favicon.ico">
   <meta name="apple-mobile-web-app-title" content="Team Nexus">
   <meta name="application-name" content="Team Nexus">
   <meta name="msapplication-TileColor" content="#455a64">
-  <meta name="msapplication-TileImage" content="images/favicons/mstile-144x144.png">
-  <meta name="msapplication-config" content="images/favicons/browserconfig.xml">
+  <meta name="msapplication-TileImage" content="../images/favicons/mstile-144x144.png">
+  <meta name="msapplication-config" content="../images/favicons/browserconfig.xml">
   <meta name="theme-color" content="#455a64">
 
 
@@ -65,11 +65,11 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
-              Language: EN
+              Language: JP
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item selected" href="">English</a>
-              <a class="dropdown-item" href="jp/">日本語</a>
+              <a class="dropdown-item" href="">English</a>
+              <a class="dropdown-item selected" href="jp/">日本語</a>
             </div>
           </li>
         </ul>
@@ -114,7 +114,7 @@
           </p>
         </div>
         <div class="col-md-4 d-none d-sm-block align-self-center">
-          <img src="images/endstone.png" alt="Nexus" class="img-fluid mx-auto d-block wow bounceIn" data-wow-offset="250">
+          <img src="../images/endstone.png" alt="Nexus" class="img-fluid mx-auto d-block wow bounceIn" data-wow-offset="250">
         </div>
       </div>
     </div>
@@ -248,7 +248,7 @@
   <div id="demo"></div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.1/esm/popper.min.js'></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js'></script>
   <!-- Initialize wow.js -->
   <script> new WOW().init();
@@ -258,7 +258,7 @@
     $('body').scrollspy({ target: '.navbar' })
   </script>
   <!-- Import and initialize smooth scrolling -->
-  <script src="js/smoothscroll.js"></script>
+  <script src="..js/smoothscroll.js"></script>
   <!-- Initialize fade-scroll effects -->
   <script>
     $(window).scroll(function () {
