--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
               Language: English
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item selected" href="../">English</a>
-              <a class="dropdown-item " href="">日本語</a>
+              <a class="dropdown-item selected" href="">English</a>
+              <a class="dropdown-item " href="jp/">日本語</a>
             </div>
           </li>
         </ul>
