--- a/jp/index.html
+++ b/jp/index.html
@@ -68,8 +68,8 @@
               Language: JP
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="">English</a>
-              <a class="dropdown-item selected" href="jp/">日本語</a>
+              <a class="dropdown-item" href="../">English</a>
+              <a class="dropdown-item selected" href="">日本語</a>
             </div>
           </li>
         </ul>
