--- a/jp/index.html
+++ b/jp/index.html
@@ -258,7 +258,7 @@
     $('body').scrollspy({ target: '.navbar' })
   </script>
   <!-- Import and initialize smooth scrolling -->
-  <script src="..js/smoothscroll.js"></script>
+  <script src="../js/smoothscroll.js"></script>
   <!-- Initialize fade-scroll effects -->
   <script>
     $(window).scroll(function () {
