Corrected errors according to the W3 Validator

--- a/jp/index.html
+++ b/jp/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117135141-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-117135141-1');
+  </script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Team Nexus</title>
+  <title>チームネクサス</title>
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/teamnexus.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -31,8 +41,8 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="64">
   <div id="navbar">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#hero">Team
-        <span>Nexus</span>
+      <a class="navbar-brand" href="#hero">チーム
+        <span>ネクサス</span>
       </a>
       <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
         aria-expanded="false" aria-label="Toggle navigation">
@@ -82,7 +92,7 @@
       <div class="row text-left ml-lg-5 fade">
         <div class="col-12 align-self-center">
           <h1 class="display-1 wow fadeInLeft">Team
-            <span class="wow bounceIn" data-wow-delay="1.25s" data-wow-duration="1s" data-wow-duration="2s">Nexus</span>
+            <span class="wow bounceIn" data-wow-delay="1.25s" data-wow-duration="2s">Nexus</span>
           </h1>
           <p class="lead wow fadeInDown mt-2 ml-lg-3" data-wow-delay="1.75s" data-wow-duration="2.5s">A community of Annihilation, MineZ, and HCF players.</p>
           <div class="wow slideInLeft mt-5 ml-lg-2 mt-sm-5 mobile" data-wow-delay="2.25s" data-wow-duration="3s">
@@ -238,7 +248,7 @@
     <div class="container">
       <div class="row">
         <div class="col align-self-center mt-3">
-          <p>&copy Team Nexus 2018 - Site created by
+          <p>&copy; Team Nexus 2018 - Site created by
             <span>Athys</span>
           </p>
         </div>
