--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117135141-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-117135141-1');
+  </script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -82,10 +92,11 @@
       <div class="row text-left ml-lg-5 fade">
         <div class="col-12 align-self-center">
           <h1 class="display-1 wow fadeInLeft">Team
-            <span class="wow bounceIn" data-wow-delay="1.25s" data-wow-duration="1s" data-wow-duration="2s">Nexus</span>
+            <span class="wow bounceIn" data-wow-delay="1.25s" data-wow-duration="2s">Nexus</span>
           </h1>
           <p class="lead wow fadeInDown mt-2 ml-lg-3" data-wow-delay="1.75s" data-wow-duration="2.5s">A community of Annihilation, MineZ, and HCF players.</p>
           <div class="wow slideInLeft mt-5 ml-lg-2 mt-sm-5 mobile" data-wow-delay="2.25s" data-wow-duration="3s">
+
             <a href="https://discord.gg/bKNWxcq" target="_blank">
               <button type="button" class="btn btn-outline-primary">Join today!</button>
             </a>
@@ -93,11 +104,11 @@
               <button type="button" class="btn btn-outline-secondary">Learn more.</button>
             </a>
 
+
           </div>
         </div>
       </div>
     </div>
-  </div>
   </div>
   <div id="about">
     <div class="container">
@@ -106,9 +117,8 @@
         <div class="col-sm-12 col-md-8 align-self-center">
           <h1>
             <mark>About Team Nexus.</mark>
-            <hr class="mt-3 d-none d-lg-block">
-
           </h1>
+          <hr class="mt-3 d-none d-lg-block">
           <p>Team Nexus is a group - not a clan - comprised of Annihilation, MineZ, HCF, and other members of the Shotbow community.
             We converse, share videos, and play together on numerous events! Discord is our main method of communication.
             Find new friends, play intense and friendly matches, or just chill out with other Shotbow players with Team Nexus!</p>
@@ -122,7 +132,6 @@
         </div>
       </div>
     </div>
-  </div>
   </div>
   <div id="features">
     <div class="container-fluid">
@@ -248,7 +257,7 @@
     <div class="container">
       <div class="row">
         <div class="col align-self-center mt-3">
-          <p>&copy Team Nexus 2018 - Site created by
+          <p>&copy; Team Nexus 2018 - Site created by
             <span>Athys</span>
           </p>
         </div>
