Fixed a typo ('annihlation' -> 'annihilation')

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <p>Team Nexus is a group - not a clan - comprised of Annihilation, MineZ, HCF, and other members of the Shotbow community.
             We converse, share videos, and play together on numerous events! Discord is our main method of communication.
             Find new friends, play intense and friendly matches, or just chill out with other Shotbow players with Team Nexus!</p>
-          <p>Though the server's name implies that we are Annihlation based, we are - generally - Shotbow based! We are open
+          <p>Though the server's name implies that we are Annihilation based, we are - generally - Shotbow based! We are open
             to all members of Shotbow's community, clans, etc. At the end of the day, we are all Shotbow players looking
             for a good time!
           </p>
